# goit-algo2-hw-06

./: README.md  pyproject.toml
app/: main.py  map_reduce_util.py
